# wine-fermentation-system

./: .env.example  .gitignore  ADR-035-PHASE-1-COMPLETE.md  ADR-IMPLEMENTATION-ORDER.md  ANALYSIS-ENGINE-ADRs.md  CLAUDE.md  COVERAGE_REPORT.md  DOCUMENTATION-CLEANUP-SUMMARY.md  Dockerfile.migrate  MEJORAS_SUGERIDAS.md  PHASE-2-API-COMPLETION-SUMMARY.md  PHASE-2-API-STATUS.md  PHASE-3-COMPLETION-STATUS.md  PROTOCOL-ANALYSIS-REAL-DATA.md  PROTOCOL-DATA-READY.md  PROTOCOL-EXTRACTION-GUIDE.md  PROTOCOL-IMPLEMENTATION-PLAN.md  PROTOCOL-SEMANTIC-VERSIONING.md  PROTOCOL-SUSANA-QUESTIONS.md  PROTOCOL-WINEMAKER-USAGE.md  TEST-FAILURE-ANALYSIS.md  TESTING.md  alembic.ini  analyze_protocols.py  debug_conftest_simulation.py  debug_double_import.py  debug_registry_simple.py  debug_sqlalchemy_registry.py  deploy.ps1  docker-compose.dev.yml  docker-compose.inttest.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  extract_protocols_auto.py  fix_sessions.py  hist_test.txt  package.json  pytest.ini  (+3 more)
src/modules/analysis_engine/: Dockerfile  __init__.py  pyproject.toml
src/modules/analysis_engine/.ai-context/: module-context.md
src/modules/analysis_engine/config/: thresholds.toml  thresholds_test.toml
src/modules/analysis_engine/src/: __init__.py  main.py
src/modules/analysis_engine/src/api/: __init__.py  dependencies.py  error_handlers.py
src/modules/analysis_engine/src/domain/: __init__.py
src/modules/analysis_engine/src/repository_component/: __init__.py
src/modules/analysis_engine/src/service_component/: __init__.py
src/modules/analysis_engine/tests/: conftest.py
src/modules/analysis_engine/tests/integration/: conftest.py
src/modules/fermentation/: .flake8  Dockerfile  README.md  debug_pdf.py  docker_db_test.py  drop_test_tables.py  extract_protocols.py  fermentation.code-workspace  generate_protocol_templates.py  manual_test_phase4.py  pyproject.toml  recreate_test_tables.py
src/modules/fermentation/.ai-context/: REFACTORING_SUMMARY.md  domain-model-guide.md  fermentation-validation-catalog.md  module-context.md  protocol-domain-model.md  protocol-module-context.md  repository-implementation-guide.md
src/modules/fermentation/extracted_protocols/: R&G Cabernet Sauvignon 2021.csv  R&G Cabernet Sauvignon 2021.json  R&G Chardonnay 2021.csv  R&G Chardonnay 2021.json  R&G Pinot Noir 2021.csv  R&G Pinot Noir 2021.json
src/modules/fermentation/src/: __init__.py  main.py
src/modules/fermentation/src/api/: __init__.py  dependencies.py  error_handlers.py
src/modules/fermentation/src/api_component/: __init__.py
src/modules/fermentation/src/domain/: __init__.py
src/modules/fermentation/src/repository_component/: __init__.py  action_repository.py  errors.py  fermentation_protocol_repository.py  protocol_alert_repository.py  protocol_execution_repository.py  protocol_step_repository.py  step_completion_repository.py  unit_of_work.py
src/modules/fermentation/src/service_component/: __init__.py  errors.py
src/modules/fermentation/src/wine_fermentation/: __init__.py
src/modules/fermentation/tests/: README.md  conftest.py
src/modules/fermentation/tests/api/: __init__.py  conftest.py  test_fermentation_endpoints.py  test_request_schemas.py  test_response_schemas.py  test_sample_endpoints.py
src/modules/fermentation/tests/integration/: __init__.py  conftest.py  test_etl_integration.py  test_etl_load_testing.py  test_etl_performance_benchmarks.py  test_protocol_integration.py
src/modules/fermentation/tests/unit/: conftest.py  test_protocol_alerts.py  test_protocol_entities.py  test_protocol_entities_simple.py  test_protocol_enums.py  test_protocol_repositories.py
src/modules/fruit_origin/: Dockerfile  pyproject.toml
src/modules/fruit_origin/.ai-context/: module-context.md
src/modules/fruit_origin/src/: main.py
src/modules/fruit_origin/src/api_component/: __init__.py  error_handlers.py
src/modules/fruit_origin/src/domain/: __init__.py
src/modules/fruit_origin/src/repository_component/: __init__.py  errors.py
src/modules/fruit_origin/src/service_component/: __init__.py
src/modules/fruit_origin/tests/: conftest.py
src/modules/fruit_origin/tests/api/: __init__.py  conftest.py  test_harvest_lot_api.py  test_vineyard_api.py
src/modules/fruit_origin/tests/integration/: conftest.py
src/modules/winery/: Dockerfile  README.md  __init__.py  pyproject.toml
src/modules/winery/.ai-context/: module-context.md
src/modules/winery/src/: __init__.py  main.py
src/modules/winery/src/api_component/: __init__.py
src/modules/winery/src/domain/: __init__.py
src/modules/winery/tests/: conftest.py
src/shared/: __init__.py  pyproject.toml
src/shared/api/: __init__.py  constants.py  error_handlers.py
src/shared/auth/: README.md  __init__.py  pyproject.toml
src/shared/auth/.ai-context/: module-context.md
src/shared/auth/domain/: __init__.py  dtos.py  errors.py
src/shared/auth/infra/: __init__.py
src/shared/auth/tests/: __init__.py  conftest.py
src/shared/domain/: __init__.py  errors.py
src/shared/infra/: __init__.py
src/shared/infra/database/: __init__.py  config.py  fastapi_session.py  session.py
src/shared/infra/interfaces/: __init__.py  database_config.py  session_manager.py
src/shared/infra/orm/: __init__.py  base_entity.py
src/shared/infra/repository/: base_repository.py  errors.py  fastapi_session_manager.py
src/shared/infra/session/: shared_session_manager.py  transaction_scope.py
src/shared/infra/test/: README.md  __init__.py  conftest.py  test_transaction_scope.py
src/shared/testing/: __init__.py
src/shared/testing/.ai-context/: module-context.md
src/shared/testing/integration/: README.md  __init__.py  base_conftest.py  entity_builders.py  fixtures.py  session_manager.py
src/shared/testing/tests/: __init__.py  conftest.py  test_base_conftest.py  test_entity_builders.py  test_fixtures.py  test_session_manager.py
src/shared/testing/unit/: README.md  USAGE_EXAMPLES.md  __init__.py
src/shared/wine_fermentator_logging/: __init__.py  logger.py  middleware.py
(+661 files in other folders)
