[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared components for Wine Fermentation Monitoring System"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "infra" },
    { include = "auth" }
]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
