[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared components for Wine Fermentation Monitoring System"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "infra" },
    { include = "auth" },
    { include = "wine_fermentator_logging" },
    { include = "testing" }
]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
pydantic = "^2.3.0"
psycopg2-binary = "^2.9.7"
structlog = "^25.5.0"
colorama = "^0.4.6"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
fastapi = "^0.103.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["testing/tests", "infra/test", "auth/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
