[tool.poetry]
name = "wine-analysis-engine-module"
version = "0.1.0"
description = "Analysis Engine Module for Wine Fermentation Monitoring System"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
pydantic = "^2.3.0"
psycopg2-binary = "^2.9.7"
loguru = "^0.7.0"
shared = {path = "../../shared", develop = true}
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
