[tool.poetry]
name = "wine-analysis-engine-module"
version = "0.1.0"
description = "Analysis Engine Module for Wine Fermentation Monitoring System"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
greenlet = ">=3.0,<3.2.5"
pydantic = "^2.3.0"
psycopg2-binary = "^2.9.7"
loguru = "^0.7.0"
tomli = {version = "^2.0", python = "<3.11"}
shared = {path = "../../shared", develop = true}
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
pythonpath = ["../../../"]
addopts = "--tb=short -v"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no database)",
    "integration: Integration tests (slower, requires database)",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
