[tool.poetry]
name = "wine-fermentation-module"
version = "0.1.0"
description = "Fermentation Management Module for Wine Fermentation Monitoring System"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "api_component", from = "src" },
    { include = "service_component", from = "src" },
    { include = "repository_component", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
sqlalchemy = "^2.0.20"
pydantic = "^2.3.0"
psycopg2-binary = "^2.9.7"
loguru = "^0.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
strict = true
