[tool.poetry]
name = "wine-fermentation-module"
version = "0.1.0"
description = "Fermentation Management Module for Wine Fermentation Monitoring System"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "api_component", from = "src" },
    { include = "service_component", from = "src" },
    { include = "repository_component", from = "src" },
    { include = "domain", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
pydantic = "^2.3.0"
psycopg2-binary = "^2.9.7"
loguru = "^0.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
structlog = "^25.5.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.43"}
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
pythonpath = ["src", "../../../"]
addopts = "--tb=short -v"
markers = [
    "unit: Unit tests (fast, no database)",
    "integration: Integration tests (slower, requires database)",
]
# Separate testpaths for unit and integration to avoid import conflicts
# Use: pytest (runs all), pytest tests/unit (unit only), pytest tests/integration (integration only)

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
warn_unused_ignores = false
disallow_any_generics = false
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
