[tool.poetry]
name = "wine-fermentation-module"
version = "0.1.0"
description = "Fermentation Management Module for Wine Fermentation Monitoring System"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "api", from = "src" },
    { include = "service_component", from = "src" },
    { include = "repository_component", from = "src" },
    { include = "domain", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
pydantic = "^2.3.0"
psycopg2-binary = "^2.9.7"
loguru = "^0.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
structlog = "^25.5.0"
colorama = "^0.4.6"
shared = {path = "../../shared", develop = true}
pandas = "^2.3.3"
openpyxl = "^3.1.5"
pdfplumber = "^0.10.0"
alembic = ">=1.13"
apscheduler = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.43"}
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
# TARGET: strict = true — see GitHub issue for debt tracker.
# New code MUST be written with full type annotations and no use of Any.
# Re-enable strict = true once all overrides below are removed.
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

# --- TYPE DEBT: files with pre-existing errors that need fixing incrementally ---
# Do NOT add new files here. Fix the errors instead.
[[tool.mypy.overrides]]
module = [
    "api.error_handlers",
    "api.routers.protocol_router",
    "api.schemas.responses.sample_responses",
    "domain",
    "domain.entities.samples.base_sample",
    "domain.repositories.fermentation_repository_interface",
    "repository_component.fermentation_protocol_repository",
    "repository_component.protocol_execution_repository",
    "repository_component.protocol_step_repository",
    "repository_component.step_completion_repository",
    "service_component.etl.etl_service",
    "service_component.etl.etl_validator",
    "service_component.services.alert_scheduler_service",
    "service_component.services.chronology_validation_service",
    "service_component.services.historical.historical_data_service",
    "service_component.services.protocol_compliance_service",
    "service_component.services.value_validation_service",
]
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["src", "../../../", "../../shared"]
addopts = "--tb=short -v"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no database)",
    "integration: Integration tests (slower, requires database)",
]
# Separate testpaths for unit and integration to avoid import conflicts
# Use: pytest (runs all), pytest tests/unit (unit only), pytest tests/integration (integration only)

