[tool.poetry]
name = "wine-winery-module"
version = "0.1.0"
description = "Winery Module for Wine Fermentation Monitoring System"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "domain", from = "src" },
    { include = "repository_component", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
pydantic = "^2.3.0"
psycopg2-binary = "^2.9.7"
structlog = "^25.5.0"
colorama = "^0.4.6"
shared = {path = "../../shared", develop = true}
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
aiosqlite = "^0.21.0"
black = "^23.7.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"
httpx = "^0.24.0"
fastapi = "^0.103.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
pythonpath = [".", "../../..", "../../shared"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
